Sliders + videos + assets tinified + green v1

--- a/index.html
+++ b/index.html
@@ -19,10 +19,37 @@
     <h2>Projets</h2>
 
     <div class="project">
-        <h3>Pixel Moshpit</h3>
-        <img class="project-image" src="assets/images/pixelmoshpit.png" alt="echo">
+        <h3>Pixelmoshpit</h3>
+
+        <div class="project-slider">
+            <ul class="project-medias">
+                <li class="project-media">
+                    <img class="project-image" src="assets/images/pixelmoshpit_01.jpg" alt="pixelmoshpit extranet">
+                </li>
+                <li class="project-media">
+                    <video class="project-video" src="assets/videos/pixelmoshpit_01.mp4" muted loop inline playsinline>
+                </li>
+                <li class="project-media">
+                    <video class="project-video" src="assets/videos/pixelmoshpit_02.mp4" muted loop inline playsinline>
+                </li>
+                <li class="project-media">
+                    <img class="project-image" src="assets/images/pixelmoshpit_02.jpg" alt="pixelmoshpit extranet">
+                </li>
+                <li class="project-media">
+                    <img class="project-image" src="assets/images/pixelmoshpit_03.jpg" alt="pixelmoshpit extranet">
+                </li>
+                <li class="project-media">
+                    <img class="project-image" src="assets/images/pixelmoshpit_04.jpg" alt="pixelmoshpit extranet">
+                </li>
+            </ul>
+
+            <div class="project-slider__next"></div>
+            <div class="project-slider__previous"></div>
+        </div>
+
         <div>
-            <p>Pixel Moshpit est une étude sur la peinture générative, réalisée pour le festival GROW et présentée lors de la session New Kids.</p>
+            <p>Pixelmoshpit est une étude expérimentale sur la peinture générative, réalisée pour le festival GROW et présentée lors de la session New Kids.</p>
+            <p>L'expérience contemplative affiche la transformation de paysages pixel par pixel, dans le but de créer des peintures numériques à partir du réel.</p>
 
         </div>
         <a class="project-link" href="http://fredericbriolet.com/pixelmoshpit/">
@@ -32,7 +59,21 @@
 
     <div class="project">
         <h3>Prélude</h3>
-        <img class="project-image" src="assets/images/prelude.png" alt="echo">
+
+        <div class="project-slider">
+            <ul class="project-medias">
+                <li class="project-media">
+                        <img class="project-image" src="assets/images/prelude.jpg" alt="prelude extranet">
+                </li>
+                <li class="project-media">
+                    <video class="project-video" src="assets/videos/prelude_01.mp4" muted loop inline playsinline>
+                </li>
+            </ul>
+
+            <div class="project-slider__next"></div>
+            <div class="project-slider__previous"></div>
+        </div>
+
         <div>
             <p>Prélude est une expérience immersive en partenariat avec le Jardin Imparfait, voulant donner envie au public d’assister aux concerts qu’il organise.</p>
             <p>Prélude permet de se projeter dans un concert à travers une expérience auditive mettant en avant les artistes du label Asterios actuellement en tournée.</p>
@@ -45,7 +86,24 @@
 
     <div class="project">
         <h3>échó</h3>
-        <img class="project-image" src="assets/images/echo.png" alt="echo">
+
+        <div class="project-slider">
+            <ul class="project-medias">
+                <li class="project-media">
+                    <img class="project-image" src="assets/images/echo_01.jpg" alt="echo extranet">
+                </li>
+                <li class="project-media">
+                    <video class="project-video" src="assets/videos/echo_01.mp4" muted loop inline playsinline>
+                </li>
+                <li class="project-media">
+                    <img class="project-image" src="assets/images/echo_02.jpg" alt="echo extranet">
+                </li>
+            </ul>
+
+            <div class="project-slider__next"></div>
+            <div class="project-slider__previous"></div>
+        </div>
+    
         <div>
             <p>Échó est une application qui invite les Parisiens à tirer profit de leurs trajets pour découvrir de la musique de manière innovante et participative.</p>
             <p>Échó se rapproche d’une radio pour le côté “découverte musicale”, reprends la programmation d’un festival mais elle est seule à offrir une telle interaction entre l’artiste et son public.</p>
@@ -57,7 +115,24 @@
 
     <div class="project">
         <h3>QUO</h3>
-        <img class="project-image" src="assets/images/quo.png" alt="quo">
+
+        <div class="project-slider">
+            <ul class="project-medias">
+                <li class="project-media">
+                        <img class="project-image" src="assets/images/quo.jpg" alt="quo">
+                </li>
+                <li class="project-media">
+                    <video class="project-video" src="assets/videos/quo_01.mp4" muted loop inline playsinline>
+                </li>
+                <li class="project-media">
+                    <video class="project-video" src="assets/videos/quo_02.mp4" muted loop inline playsinline>
+                </li>
+            </ul>
+
+            <div class="project-slider__next"></div>
+            <div class="project-slider__previous"></div>
+        </div>
+
         <div>
             <p>QUO est un quotidien didactique sur bandeau papier qui s’imprime à la demande de l’utilisateur.</p>
             <p>Disponible depuis les lieux publics culturels, il est le média aux recommandations slow médias variées qui encourage l’approfondissement de sujet d’actualités.</p>
@@ -70,7 +145,21 @@
 
     <div class="project">
         <h3>Spectre</h3>
-        <img class="project-image" src="assets/images/spectre.png" alt="spectre">
+
+        <div class="project-slider">
+            <ul class="project-medias">
+                <li class="project-media">
+                    <img class="project-image" src="assets/images/spectre.jpg" alt="spectre">
+                </li>
+                <li class="project-media">
+                    <video class="project-video" src="assets/videos/spectre_01.mp4" muted loop inline playsinline>
+                </li>
+            </ul>
+
+            <div class="project-slider__next"></div>
+            <div class="project-slider__previous"></div>
+        </div>
+        
         <div>
             <p>Conception et réalisation d'une installation interactive pour le musée du Louvre.</p>
             <p>Le dispositif constitue une prolongation d'une œuvre de François Le Diascorn, illustrant un déplacement de matière par l’utilisation d’un flou de mouvement.</p>
@@ -82,12 +171,14 @@
     </div>
 
     <h2>Équipe</h2>
-    <img class="project-image" src="assets/images/lesmecs.png" alt="equipe">
+    <img class="project-image" src="assets/images/lesmecs.jpg" alt="equipe">
     <div class="team">
-        <a href="http://lucasdomingues.fr">Lucas</a>
-        <a href="http://charlielemaignan.com/">Charlie</a>
-        <a href="http://fredericbriolet.com">Fred</a>
-        <a href="https://github.com/MathieuDebit">Mathieu</a>
+        <a href="http://lucasdomingues.fr" target="_blank">Lucas</a>
+        <a href="http://charlielemaignan.com/" target="_blank">Charlie</a>
+        <a href="http://fredericbriolet.com" target="_blank">Fred</a>
+        <a href="https://github.com/MathieuDebit" target="_blank">Mathieu</a>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
