Intro text bigger + videos on first slide (except quo) 🎬

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="project-slider">
             <ul class="project-medias">
                 <li class="project-media">
-                    <img class="project-image" src="assets/images/pixelmoshpit_01.jpg" alt="pixelmoshpit extranet">
+                    <video class="project-video" src="assets/videos/pixelmoshpit_01.mp4" autoplay muted loop inline playsinline>
                 </li>
                 <li class="project-media">
-                    <video class="project-video" src="assets/videos/pixelmoshpit_01.mp4" muted loop inline playsinline>
+                    <img class="project-image" src="assets/images/pixelmoshpit_01.jpg" alt="pixelmoshpit extranet">
                 </li>
                 <li class="project-media">
                     <video class="project-video" src="assets/videos/pixelmoshpit_02.mp4" muted loop inline playsinline>
@@ -63,10 +63,10 @@
         <div class="project-slider">
             <ul class="project-medias">
                 <li class="project-media">
-                        <img class="project-image" src="assets/images/prelude.jpg" alt="prelude extranet">
+                    <video class="project-video" src="assets/videos/prelude_01.mp4" autoplay muted loop inline playsinline>
                 </li>
                 <li class="project-media">
-                    <video class="project-video" src="assets/videos/prelude_01.mp4" muted loop inline playsinline>
+                    <img class="project-image" src="assets/images/prelude.jpg" alt="prelude extranet">
                 </li>
             </ul>
 
@@ -90,10 +90,10 @@
         <div class="project-slider">
             <ul class="project-medias">
                 <li class="project-media">
-                    <img class="project-image" src="assets/images/echo_01.jpg" alt="echo extranet">
+                    <video class="project-video" src="assets/videos/echo_01.mp4" autoplay muted loop inline playsinline>
                 </li>
                 <li class="project-media">
-                    <video class="project-video" src="assets/videos/echo_01.mp4" muted loop inline playsinline>
+                    <img class="project-image" src="assets/images/echo_01.jpg" alt="echo extranet">
                 </li>
                 <li class="project-media">
                     <img class="project-image" src="assets/images/echo_02.jpg" alt="echo extranet">
@@ -119,7 +119,7 @@
         <div class="project-slider">
             <ul class="project-medias">
                 <li class="project-media">
-                        <img class="project-image" src="assets/images/quo.jpg" alt="quo">
+                    <img class="project-image" src="assets/images/quo.jpg" alt="quo">
                 </li>
                 <li class="project-media">
                     <video class="project-video" src="assets/videos/quo_01.mp4" muted loop inline playsinline>
@@ -149,10 +149,10 @@
         <div class="project-slider">
             <ul class="project-medias">
                 <li class="project-media">
-                    <img class="project-image" src="assets/images/spectre.jpg" alt="spectre">
+                    <video class="project-video" src="assets/videos/spectre_01.mp4" autoplay muted loop inline playsinline>
                 </li>
                 <li class="project-media">
-                    <video class="project-video" src="assets/videos/spectre_01.mp4" muted loop inline playsinline>
+                    <img class="project-image" src="assets/images/spectre.jpg" alt="spectre">
                 </li>
             </ul>
 
